@@ -24,9 +24,12 @@ import uk.gov.hmcts.reform.fpl.model.PBAPayment;
 import uk.gov.hmcts.reform.fpl.model.common.AdditionalApplicationsBundle;
 import uk.gov.hmcts.reform.fpl.model.common.C2DocumentBundle;
 import uk.gov.hmcts.reform.fpl.model.common.Element;
+import uk.gov.hmcts.reform.fpl.model.event.C2AdditionalApplicationEventData;
+import uk.gov.hmcts.reform.fpl.model.event.UploadAdditionalApplicationsEventData;
 import uk.gov.hmcts.reform.fpl.model.order.DraftOrder;
 import uk.gov.hmcts.reform.fpl.model.order.HearingOrder;
 import uk.gov.hmcts.reform.fpl.model.order.HearingOrdersBundles;
+import uk.gov.hmcts.reform.fpl.service.ConfidentialDetailsService;
 import uk.gov.hmcts.reform.fpl.service.PbaNumberService;
 import uk.gov.hmcts.reform.fpl.service.UserService;
 import uk.gov.hmcts.reform.fpl.service.additionalapplications.ApplicantsListGenerator;
@@ -36,6 +39,7 @@ import uk.gov.hmcts.reform.fpl.service.ccd.CoreCaseDataService;
 import uk.gov.hmcts.reform.fpl.service.cmo.DraftOrderService;
 import uk.gov.hmcts.reform.fpl.service.document.ManageDocumentService;
 import uk.gov.hmcts.reform.fpl.service.payment.PaymentService;
+import uk.gov.hmcts.reform.fpl.service.workallocation.WorkAllocationTaskService;
 import uk.gov.hmcts.reform.fpl.utils.ElementUtils;
 
 import java.util.ArrayList;
@@ -49,7 +53,6 @@ import static java.util.Objects.isNull;
 import static org.apache.commons.lang3.ObjectUtils.defaultIfNull;
 import static org.apache.commons.lang3.ObjectUtils.isEmpty;
 import static org.apache.commons.lang3.ObjectUtils.isNotEmpty;
-import static uk.gov.hmcts.reform.fpl.enums.C2AdditionalOrdersRequested.REQUESTING_ADJOURNMENT;
 import static uk.gov.hmcts.reform.fpl.enums.YesNo.NO;
 import static uk.gov.hmcts.reform.fpl.enums.YesNo.YES;
 import static uk.gov.hmcts.reform.fpl.utils.CaseDetailsHelper.removeTemporaryFields;
@@ -66,9 +69,9 @@ public class UploadAdditionalApplicationsController extends CallbackController {
     private static final String DISPLAY_AMOUNT_TO_PAY = "displayAmountToPay";
     private static final String AMOUNT_TO_PAY = "amountToPay";
     private static final String TEMPORARY_C2_DOCUMENT = "temporaryC2Document";
-    private static final String TEMPORARY_OTHER_APPLICATIONS_BUNDLE = "temporaryOtherApplicationsBundle";
+    private static final String IS_CTSC_USER = "isCTSCUser";
     private static final String SKIP_PAYMENT_PAGE = "skipPaymentPage";
-    private static final String IS_C2_CONFIDENTIAL = "isC2Confidential";
+    private static final String STATEMENT_OF_TRUTH = "statementOfTruth";
 
     private final ObjectMapper mapper;
     private final DraftOrderService draftOrderService;
@@ -80,6 +83,8 @@ public class UploadAdditionalApplicationsController extends CallbackController {
     private final UserService userService;
     private final ManageDocumentService manageDocumentService;
     private final PbaNumberService pbaNumberService;
+    private final WorkAllocationTaskService workAllocationTaskService;
+    private final ConfidentialDetailsService confidentialDetailsService;
 
     @PostMapping("/about-to-start")
     public AboutToStartOrSubmitCallbackResponse handleAboutToStart(@RequestBody CallbackRequest callbackRequest) {
@@ -98,13 +103,19 @@ public class UploadAdditionalApplicationsController extends CallbackController {
 
         CaseDetails caseDetails = callbackRequest.getCaseDetails();
         CaseData caseData = getCaseData(caseDetails);
+        UploadAdditionalApplicationsEventData eventData = caseData.getUploadAdditionalApplicationsEventData();
 
-        if (caseData.getAdditionalApplicationType().contains(AdditionalApplicationType.C2_ORDER)) {
+        if (eventData.getAdditionalApplicationType().contains(AdditionalApplicationType.C2_ORDER)) {
             // Initialise the C2 document bundle so we can have a dynamic list present
-            caseDetails.getData().put(TEMPORARY_C2_DOCUMENT, C2DocumentBundle.builder()
-                .hearingList(caseData.buildDynamicHearingList())
-                .build());
+            caseDetails.getData().put(TEMPORARY_C2_DOCUMENT,
+                C2AdditionalApplicationEventData.builder()
+                    .hearingList(caseData.buildDynamicHearingList())
+                    .childSelectorForApplication(
+                        uploadAdditionalApplicationsService.getChildrenMultiSelectList(caseData))
+                    .build());
         }
+
+        caseDetails.getData().putAll(confidentialDetailsService.populateHasConfidentialPartyFlag(caseData));
         return respond(caseDetails);
     }
 
@@ -112,14 +123,21 @@ public class UploadAdditionalApplicationsController extends CallbackController {
     public AboutToStartOrSubmitCallbackResponse handleMidEvent(@RequestBody CallbackRequest callbackRequest) {
         CaseDetails caseDetails = callbackRequest.getCaseDetails();
         CaseData caseData = getCaseData(caseDetails);
+        UploadAdditionalApplicationsEventData eventData = caseData.getUploadAdditionalApplicationsEventData();
 
         boolean skipPayment = false;
-        if (!isNull(caseData.getTemporaryC2Document())) {
-            C2DocumentBundle temporaryC2Document = caseData.getTemporaryC2Document();
-            temporaryC2Document.setType(caseData.getC2Type());
+        if (!isNull(eventData.getTemporaryC2Document())) {
+            C2AdditionalApplicationEventData temporaryC2Document =
+                eventData.getTemporaryC2Document();
+            temporaryC2Document.setType(eventData.getC2Type());
 
-            if (!isNull(temporaryC2Document.getC2AdditionalOrdersRequested())
-                && temporaryC2Document.getC2AdditionalOrdersRequested().contains(REQUESTING_ADJOURNMENT)) {
+            List<String> errors = uploadAdditionalApplicationsService.validateC2Bundle(eventData);
+            // Draft order is mandatory to non-CTSC user
+            if (!isEmpty(errors)) {
+                return respond(caseDetails, errors);
+            }
+
+            if (YES.equals(temporaryC2Document.getIsHearingAdjournmentRequired())) {
                 // Get the selected hearing from the dynamic list + populate the 'selected hearing' field
                 UUID selectedHearingCode = getDynamicListSelectedValue(temporaryC2Document.getHearingList(), mapper);
                 HearingBooking hearing = findElement(selectedHearingCode,
@@ -139,7 +157,7 @@ public class UploadAdditionalApplicationsController extends CallbackController {
         if (!skipPayment) {
             caseDetails.getData().putAll(uploadAdditionalApplicationsService.populateTempPbaPayment());
             caseDetails.getData().putAll(applicationsFeeCalculator.calculateFee(caseData));
-            caseDetails.getData().put("isCTSCUser", userService.isCtscUser() ? YES.getValue() : NO.getValue());
+            caseDetails.getData().put(IS_CTSC_USER, userService.isCtscUser() ? YES.getValue() : NO.getValue());
             caseDetails.getData().put(SKIP_PAYMENT_PAGE, NO.getValue());
         } else {
             caseDetails.getData().put(DISPLAY_AMOUNT_TO_PAY, NO.getValue());
@@ -153,9 +171,10 @@ public class UploadAdditionalApplicationsController extends CallbackController {
     public AboutToStartOrSubmitCallbackResponse handleValidateMidEvent(@RequestBody CallbackRequest callbackRequest) {
         CaseDetails caseDetails = callbackRequest.getCaseDetails();
         CaseData caseData = getCaseData(caseDetails);
+        UploadAdditionalApplicationsEventData eventData = caseData.getUploadAdditionalApplicationsEventData();
 
         if (YesNo.YES.equals(caseData.getIsCTSCUser())) {
-            PBAPayment tempPbaPayment = caseData.getTemporaryPbaPayment();
+            PBAPayment tempPbaPayment = eventData.getTemporaryPbaPayment();
             PBAPayment updatedPbaPayment = pbaNumberService.updatePBAPayment(tempPbaPayment);
             caseDetails.getData().put("temporaryPbaPayment", updatedPbaPayment);
 
@@ -177,11 +196,12 @@ public class UploadAdditionalApplicationsController extends CallbackController {
             ((LinkedHashMap) caseDetails.getData().get(TEMPORARY_C2_DOCUMENT)).put("hearingList", null);
         }
         CaseData caseData = getCaseData(caseDetails);
+        UploadAdditionalApplicationsEventData eventData = caseData.getUploadAdditionalApplicationsEventData();
 
-        if (!isNull(caseData.getTemporaryC2Document())
-            && !caseData.getTemporaryC2Document().getDraftOrdersBundle().isEmpty()) {
+        if (!isNull(eventData.getTemporaryC2Document())
+            && !eventData.getTemporaryC2Document().getDraftOrdersBundle().isEmpty()) {
 
-            List<Element<DraftOrder>> draftOrders = caseData.getTemporaryC2Document().getDraftOrdersBundle();
+            List<Element<DraftOrder>> draftOrders = eventData.getTemporaryC2Document().getDraftOrdersBundle();
             draftOrders.forEach(order -> {
                 order.getValue().setUploaderCaseRoles(manageDocumentService.getUploaderCaseRoles(caseData));
                 order.getValue().setUploaderType(manageDocumentService.getUploaderType(caseData));
@@ -194,7 +214,7 @@ public class UploadAdditionalApplicationsController extends CallbackController {
 
             HearingOrdersBundles hearingOrdersBundles = draftOrderService.migrateCmoDraftToOrdersBundles(caseData);
 
-            if (YES.equals(caseData.getIsC2Confidential())) {
+            if (YES.equals(eventData.getIsC2Confidential())) {
                 draftOrderService.confidentialAdditionalApplicationUpdateCase(caseData, newDrafts,
                     hearingOrdersBundles.getAgreedCmos());
             } else {
@@ -224,10 +244,11 @@ public class UploadAdditionalApplicationsController extends CallbackController {
         caseDetails.getData().put("latestRoleSent", uploadAdditionalApplicationsService
             .getAllocatedJudgeOrLegalAdviserType(caseData));
 
-        removeTemporaryFields(caseDetails, TEMPORARY_C2_DOCUMENT, "c2Type",
-            "additionalApplicationType", AMOUNT_TO_PAY, "temporaryPbaPayment",
-            TEMPORARY_OTHER_APPLICATIONS_BUNDLE, "applicantsList", "otherApplicant", SKIP_PAYMENT_PAGE,
-            IS_C2_CONFIDENTIAL, "isCTSCUser");
+        workAllocationTaskService.setTaskUrgency(caseDetails.getData(),
+            uploadAdditionalApplicationsService.getBundleUrgency(additionalApplicationsBundle));
+
+        removeTemporaryFields(caseDetails, UploadAdditionalApplicationsEventData.class);
+        removeTemporaryFields(caseDetails, AMOUNT_TO_PAY, IS_CTSC_USER, SKIP_PAYMENT_PAGE, STATEMENT_OF_TRUTH);
 
         return respond(caseDetails);
     }
@@ -239,7 +260,7 @@ public class UploadAdditionalApplicationsController extends CallbackController {
         CaseData oldCaseData = getCaseData(oldCaseDetails);
         final CaseData caseDataBefore = getCaseDataBefore(callbackRequest);
 
-        final UUID lastBundleId = oldCaseData.getAdditionalApplicationsBundle().get(0).getId();
+        final UUID lastBundleId = oldCaseData.getAdditionalApplicationsBundle().getFirst().getId();
 
         CaseDetails caseDetails = coreCaseDataService.performPostSubmitCallback(oldCaseDetails.getId(),
             "internal-change-upload-add-apps",
